rework domain namings and tests in whole application