@@ -2,26 +2,26 @@ package com.harvest.katadamienhuart.infrastructure.api;
 
 import com.harvest.katadamienhuart.domain.usecase.AskForTemperatureCommand;
 import com.harvest.katadamienhuart.domain.usecase.AskForTemperatureUseCase;
-import com.harvest.katadamienhuart.infrastructure.postgres.PostgresSensorRepository;
-
+import com.harvest.katadamienhuart.domain.usecase.RetrieveLast15TakenTemperaturesCommand;
+import com.harvest.katadamienhuart.domain.usecase.RetrieveLast15TakenTemperaturesUseCase;
 import jakarta.ws.rs.GET;
 import jakarta.ws.rs.Path;
 import jakarta.ws.rs.Produces;
 import jakarta.ws.rs.core.MediaType;
+
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 
 @Path("/sensor")
 public class SensorEndpoint {
 
     private final AskForTemperatureUseCase askForTemperatureUseCase;
-    private final PostgresSensorRepository postgresSensorRepository;
+    private final RetrieveLast15TakenTemperaturesUseCase retrieveLast15TakenTemperaturesUseCase;
 
     public SensorEndpoint(final AskForTemperatureUseCase askForTemperatureUseCase,
-                          final PostgresSensorRepository postgresSensorRepository) {
+                          final RetrieveLast15TakenTemperaturesUseCase retrieveLast15TakenTemperaturesUseCase) {
         this.askForTemperatureUseCase = Objects.requireNonNull(askForTemperatureUseCase);
-        this.postgresSensorRepository = Objects.requireNonNull(postgresSensorRepository);
+        this.retrieveLast15TakenTemperaturesUseCase = Objects.requireNonNull(retrieveLast15TakenTemperaturesUseCase);
     }
 
     @GET
@@ -34,10 +34,11 @@ public class SensorEndpoint {
     @GET
     @Path("/retrieveLast15Temperatures")
     @Produces(MediaType.APPLICATION_JSON)
-    public List<SensorDTO> retrieveLast15Temperatures() {
-        return postgresSensorRepository.getLast15OrderedByTakenAtDesc()
+    public List<SensorHistoryDTO> retrieveLast15Temperatures() {
+        return retrieveLast15TakenTemperaturesUseCase.execute(new RetrieveLast15TakenTemperaturesCommand())
                 .stream()
-                .map(SensorDTO::new).collect(Collectors.toList());
+                .map(SensorHistoryDTO::new)
+                .toList();
     }
 
 }
